wiki.js-v1.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wikijs
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wikijs
    spec:
      containers:
        - name: wikijs
          image: requarks/wiki:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /var/wiki
      volumes:
         - name: config-volume
           configMap:
            name: config.yml

---
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  labels:
    name: wikijs
spec:
  type: ClusterIP
  ports:
    - name: wikijs
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: wikijs
