wiki.js-v2.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wikijs
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wikijs
    spec:
      containers:
        - name: wikijs
          image: requarks/wiki:beta
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  labels:
    name: wikijs
spec:
  type: ClusterIP
  ports:
    - name: wikijs
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: wikijs
