wiki.js.ingress.ssl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wikijs-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: wikijs.conceptmatcher.com
      http:
        paths:
          - path: /
            backend:
              serviceName: wikijs
              servicePort: 3000
  tls:
  - hosts:
    - "www.conceptmatcher.com"
    secretName: conceptmatcher-com-tls
