wiki.js.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wikijs-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: wikijs.myhost.home
      http:
        paths:
          - path: /
            backend:
              serviceName: wikijs
              servicePort: 3000
